# wrapper

./: .dockerignore  .env.example  CMakeLists.txt  Dockerfile  README.md  cmdline.c  cmdline.h  compose.yaml  entrypoint.sh  macos-native.c  main.c  wrapper-common.h  wrapper-rootless.c  wrapper.c  wrapper.ggo
scripts/: check.sh  doctor.sh  smoke.sh
tests/stubs/: cJSON.h  linux_compat.h
